--- a/walkthroughs/4-protecting-apis/walkthrough.adoc
+++ b/walkthroughs/4-protecting-apis/walkthrough.adoc
@@ -10,6 +10,7 @@
 //attributes
 :title: Low-code API development and SaaS integration
 :3scale-name: Red Hat 3scale API Management Platform
+:standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
 [#4-protecting-apis]
 = {title}
@@ -30,20 +31,20 @@ You then use the resulting Open API definition to generate the code for your API
 Following a design first approach to API development is self-documenting, and provides a clear API definition for partners and end-users of your API.
 It also allows you to identify important design decisions prior to coding and deployment.
 
-[type=walkthroughResource,serviceName=fuse]
-.Fuse Online
-****
-* link:{fuse-url}[Console, window="_blank"]
-****
-
 [type=walkthroughResource,serviceName=openshift]
 .Red Hat OpenShift
 ****
 * link:{openshift-host}/console[Console, window="_blank"]
 ****
 
+[type=walkthroughResource,serviceName=fuse]
+.Red Hat Fuse Online
+****
+* link:{fuse-url}[Console, window="_blank"]
+****
+
 [type=walkthroughResource,serviceName=3scale]
-.3Scale
+.Red Hat 3scale API Management Platform
 ****
 * link:{api-management-url}[Console, window="_blank"]
 * link:https://developers.redhat.com/products/3scale/overview/[3Scale Overview, window="_blank"]
@@ -109,7 +110,7 @@ Hello from
 Does the Fuse Online *Home* screen list your *Greeting Integration* with a blue box that contains the text *Running*?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above.  If you are still having issues, contact your administrator.
+{standard-fail-text}
 
 
 
@@ -128,7 +129,7 @@ Verify that you followed each step in the procedure above.  If you are still hav
 Can you see the {3scale-name} Dashboard that shows the Audience and APIs panels?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above. If you are still having issues, contact your administrator.
+{standard-fail-text}
 
 
 === Adding the App Endpoint to Red Hat 3scale
@@ -184,7 +185,7 @@ Note: There is a warning icon next to this link that suggests promoting the conf
 Is the staging environment listed in the *Environments* section on the *Integration > Configuration* screen?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above. If you are still having issues, contact your administrator.
+{standard-fail-text}
 
 === Creating and Application and Application Plan
 
@@ -231,7 +232,7 @@ test
 Review the settings in 3scale. Do they match the settings outlined in this task?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above.  If you are still having issues, contact your administrator.
+{standard-fail-text}
 
 
 === Invoking the API
@@ -247,4 +248,4 @@ curl -d '{"name":"John"}' -H "Content-Type: application/json" -X POST "{route}/g
 Did the message "Hello from John" appear in your Slack channel?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above.  If you are still having issues, contact your administrator.
+{standard-fail-text}
