--- a/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
+++ b/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
@@ -14,7 +14,8 @@
 :retrieve-messages-app: Order Management System
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
-[#1-connecting-apps-asynchronous-messaging]
+//id syntax is used here for the custom IDs because that is how the Solution Explorer sorts these within groups
+[id='1-connecting-apps-asynchronous-messaging']
 = {title}
 
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
