--- a/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
+++ b/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
@@ -19,7 +19,7 @@
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
 
-[#2-protecting-apps-sso]
+[id='2-protecting-apps-sso']
 = {title}
 
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
