--- a/walkthroughs/3-low-code-api-development/walkthrough.adoc
+++ b/walkthroughs/3-low-code-api-development/walkthrough.adoc
@@ -10,7 +10,7 @@
 :title: Low-code API development and SaaS integration
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
-[#3-low-code-api-development]
+[id='3-low-code-api-development']
 = {title}
 
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
