--- a/walkthroughs/4-protecting-apis/walkthrough.adoc
+++ b/walkthroughs/4-protecting-apis/walkthrough.adoc
@@ -13,7 +13,7 @@
 :3scale-name: Red Hat 3scale API Management Platform
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
-[#4-protecting-apis]
+[id='4-protecting-apis']
 = {title}
 
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
