--- a/walkthroughs/5-adding-data-sync-graphql/walkthrough.adoc
+++ b/walkthroughs/5-adding-data-sync-graphql/walkthrough.adoc
@@ -16,7 +16,7 @@
 :shared-realm-username: walkthroughs
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
-[#5-adding-data-sync-graphql]
+[id='5-adding-data-sync-graphql']
 = {title}
 
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
