--- a/walkthroughs/3-low-code-api-development/walkthrough.adoc
+++ b/walkthroughs/3-low-code-api-development/walkthrough.adoc
@@ -10,6 +10,7 @@
 :title: Low-code API development and SaaS integration
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
+//id syntax is used here for the custom IDs because that is how the Solution Explorer sorts these within groups
 [id='3-low-code-api-development']
 = {title}
 
