--- a/walkthroughs/4-protecting-apis/walkthrough.adoc
+++ b/walkthroughs/4-protecting-apis/walkthrough.adoc
@@ -13,6 +13,7 @@
 :3scale-name: Red Hat 3scale API Management Platform
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
+//id syntax is used here for the custom IDs because that is how the Solution Explorer sorts these within groups
 [id='4-protecting-apis']
 = {title}
 
