--- a/walkthroughs/5-adding-data-sync-graphql/walkthrough.adoc
+++ b/walkthroughs/5-adding-data-sync-graphql/walkthrough.adoc
@@ -16,6 +16,7 @@
 :shared-realm-username: walkthroughs
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
+//id syntax is used here for the custom IDs because that is how the Solution Explorer sorts these within groups
 [id='5-adding-data-sync-graphql']
 = {title}
 
