--- a/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
+++ b/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
@@ -57,7 +57,7 @@ image::images/arch.png[integration, role="integr8ly-img-responsive"]
 //Task 1
 //include::{tasksdir}creating-an-address.adoc[]
 [time=6]
-[#creating-an-address]
+[id=creating-an-address]
 ==  Creating an address
 :context: creating-connections
 
@@ -104,7 +104,7 @@ Look at the link:{enmasse-url}[AMQ Online, window="_blank", id="{context}-2"] co
 //Task 2
 //include::{tasksdir}creating-a-table.adoc[]
 [time=6]
-[#creating-an-address]
+[id=creating-an-address]
 ==  Creating an address
 :context: creating-connections
 
@@ -151,7 +151,7 @@ Look at the link:{enmasse-url}[AMQ Online, window="_blank", id="{context}-2"] co
 //Task 3
 //include::{tasksdir}creating-connections.adoc[]
 [time=5]
-[#creating-connections]
+[id=creating-connections]
 == Creating connections
 :context: creating-connections
 
@@ -330,7 +330,7 @@ Is the new connection displayed on the *Connections* screen of the link:{fuse-ur
 //Task 4
 //include::{tasksdir}creating-an-integration.adoc[]
 [time=5]
-[#creating-an-integration]
+[id=creating-an-integration]
 == Creating an integration
 :context: creating-an-integration
 
@@ -433,7 +433,7 @@ Is the integration displayed as *Running* on the *Integrations* screen of the li
 //Task 5
 //include::{tasksdir}using-the-integration.adoc[]
 [time=5]
-[#using-the-integration]
+[id=using-the-integration]
 == Using the integration
 :context: using-the-application-integration
 
