--- a/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
+++ b/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
@@ -1,82 +1,77 @@
-:walkthrough: Integrating message-oriented middleware with a RESTful API using AMQ Online
+// update the component versions for each release
 :fuse-version: 7.4
+:amq-version: 7.4
+
+// URLs
+:openshift-console-url: {openshift-host}/console
 :fuse-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_fuse/{fuse-version}/
-:amq-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_amq/7.4/
+:amq-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_amq/{amq-version}/
 
-[id='integrating-eventdriven-and-apidriven-applications']
-= {walkthrough}
+//attributes
+:title: Connecting applications using asynchronous messaging
+//:tasksdir: ../_tasks/
+:create-messages-app: Order Entry System
+:retrieve-messages-app: Order Management System
+:standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
-// word count range that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
-This Solution Pattern demonstrates a fault tolerant integration pattern that integrates a message driven architecture with a RESTful API architecture.
+//id syntax is used here for the custom IDs because that is how the Solution Explorer sorts these within groups
+[id='1-connecting-apps-asynchronous-messaging']
+= {title}
 
-Message-oriented middleware (MOM)::
-MOM allows you to implement an asynchronous, routable, and transformable message queue.
+// word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
+Learn how to create a simple integration with built-in monitoring, so you can enable fault tolerant communication between applications.
 
-API-centric architecture::
-Typically, a developer working on a back-end application implements a synchronous RESTful API to allow communication from other applications.
+*Welcome to Cruddy’s Car Parts*
 
-You may identify business value, as part of an application modernization effort, by integrating a message queue with an API.
-This is not trivial, because of the conflicting underlying timing models. The data may require transformation to be usable.
+In this Solution Pattern, you will be using two applications from a fictitious company called Cruddy’s Car Parts. Both applications are built with PatternFly, an open source design system, and Node.js.
 
-This Solution Pattern consists of the following components:
-
-* An Order Entry System, built with Node.js, that provides a RESTful API and a user interface to create order messages
-* An Order Management System RESTful API, built with Red Hat Fuse, for querying and creating orders in an underlying PostgreSQL database
-* An Order Management System user interface, built with Node.js, for visualising orders in the PostgreSQL database using the Fuse RESTful API
-
-
-To create this integration, use link:{enmasse-url}[AMQ Online, window="_blank", id="wt1a_GS_enmasse-url"] and API connectors in link:{fuse-url}[Red Hat Fuse Online, window="_blank", id="wt1a_GS_fuse-url"].
-
-All of the applications and services used in this Solution Pattern are running on Red Hat OpenShift.
-
+* {create-messages-app} - Provides a RESTful API and a user interface to create order messages for customers.
+* {retrieve-messages-app} - Uses a RESTful API that is built with Red Hat Fuse for querying and creating orders in an underlying PostgreSQL database.
 
 image::images/arch.png[integration, role="integr8ly-img-responsive"]
-
 
 [type=walkthroughResource,serviceName=openshift]
 .Red Hat OpenShift
 ****
-* link:{openshift-host}/console[Console, window="_blank"]
+* link:{openshift-console-url}[Console, window="_blank"]
 * link:https://help.openshift.com/[OpenShift Online Help Center, window="_blank"]
 * link:https://blog.openshift.com/[OpenShift Blog, window="_blank"]
 ****
 
 [type=walkthroughResource,serviceName=fuse]
-.Fuse Online
+.Red Hat Fuse Online
 ****
 * link:{fuse-url}[Console, window="_blank", id="resources-fuse-url"]
 * link:{fuse-documentation-url}[Fuse Documentation, window="_blank"]
 ****
 
 [type=walkthroughResource,serviceName=amq-online-standard]
-.AMQ Online
+.Red Hat AMQ Online
 ****
 * link:{enmasse-url}[Console, window="_blank", , id="resources-enmasse-url"]
 * link:{amq-documentation-url}[AMQ Documentation, window="_blank"]
 ****
 
-
-// tag:task-creating-addresses.adoc[]
-
-[time=6]
-
-[id='creating-addresses_{context}']
-
-
 :sectnums:
 
-
-==  Creating an address in AMQ Online address space
+[time=6]
+[id='creating-an-address']
+==  Creating an address
 :context: creating-connections
 
-// tag::creating-api-connector[]
+To route messages from the {create-messages-app} to the {retrieve-messages-app}, you will need to create an address in Red Hat AMQ Online.
 
-To route messages from the Order Entry System to the Order Management System, create an address in AMQ Online.
+****
+.What is AMQ Online?
+AMQ Online is a Red Hat Integration component that enables developers to self-provision messaging queues and topics on OpenShift.
+****
 
 . Log into link:{enmasse-url}[AMQ Online, window="_blank", id="{context}-1"].
++
+NOTE: If this is your first time opening the AMQ Online console, you will need to authenticate.
 . Select *Addresses* from the left hand menu.
 
-. Create a *requests* address:
+. Create a requests address:
 .. Select the *Create* button to start the *Create new address* wizard.
 .. Enter the following as the name:
 +
@@ -92,73 +87,64 @@ work-queue-requests
 Creating an address may take some time.
 
 [type=verification]
-Is the newly created address displayed on the *Addresses* screen of the link:{enmasse-url}[AMQ Online, window="_blank", id="{context}-2"] console?
+Look at the link:{enmasse-url}[AMQ Online, window="_blank", id="{context}-2"] console. Do you see your newly created address displayed on the *Addresses* screen?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above. If you are still having issues, contact your administrator.
-
-// end::task-creating-addresses[]
-
-
+{standard-fail-text}
 
 [type=taskResource]
 .Task Resources
 ****
-* link:https://access.redhat.com/documentation/en-us/red_hat_amq/7.4/html/using_amq_online_on_openshift_container_platform/managing-address-spaces-messaging#proc-create-address-space-console-messaging[Creating addresses using the AMQ Online Console, window="_blank"]
+* link:https://access.redhat.com/documentation/en-us/red_hat_amq/{amq-version}/html/using_amq_online_on_openshift_container_platform/managing-address-spaces-messaging#proc-create-address-space-console-messaging[Creating addresses using the AMQ Online Console, window="_blank"]
 ****
 
-[time=5]
-==  Creating a table in PostgreSQL
-:context: creating-a-table
 
-// tag::task-table-setup[]
+[time=6]
+[id=creating-an-address]
+==  Creating an address
+:context: creating-connections
 
-Create a table to store orders.
+To route messages from the {create-messages-app} to the {retrieve-messages-app}, you will need to create an address in Red Hat AMQ Online.
 
-. Log into link:{openshift-host}/console/project/{walkthrough-namespace}/overview[OpenShift Namespace, window="_blank"] for this walkthrough.
-. Select *Applications > Pods* from the left hand menu.
-. Click the Pod that has the name *rhmi-lab-orders-db* followed by an ID, for example *rhmi-lab-orders-db-1-cfqh2*.
-. Select the *Terminal* tab on the Pod details screen.
-. Log in to the *orders* database using the command:
+****
+.What is AMQ Online?
+AMQ Online is a Red Hat Integration component that enables developers to self-provision messaging queues and topics on OpenShift.
+****
+
+. Log into link:{enmasse-url}[AMQ Online, window="_blank", id="{context}-1"].
++
+NOTE: If this is your first time opening the AMQ Online console, you will need to authenticate.
+. Select *Addresses* from the left hand menu.
+
+. Create a requests address:
+.. Select the *Create* button to start the *Create new address* wizard.
+.. Enter the following as the name:
 +
 [subs="attributes+"]
 ----
-psql -U {user-username} -W -d orders
+work-queue-requests
 ----
-. Enter the following when prompted:
-+
-[subs="attributes+"]
-----
-password
-----
-+
-For security reasons, the password is not shown in the terminal.
-Paste the password then press the *Enter* key.
+.. Select *queue* as the type and click *Next*.
+.. Select *Small Queue* as the address plan and click *Next*.
+.. Select *Create* to complete the wizard.
 
-. Paste the following as SQL to create the `received_orders` table:
-+
-[subs="attributes+"]
-----
-CREATE TABLE received_orders (
-  id serial PRIMARY KEY,
-  product text NOT NULL,
-  quantity int NOT NULL,
-  message_id text NOT NULL,
-  datetime timestamp NOT NULL
-);
-----
+. Monitor the AMQ Online console until a green check mark is displayed beside the new address.
+Creating an address may take some time.
 
 [type=verification]
-Is the `received_orders` table listed when you enter the `\d` command in the terminal for the PostgreSQL pod?
+Look at the link:{enmasse-url}[AMQ Online, window="_blank", id="{context}-2"] console. Do you see your newly created address displayed on the *Addresses* screen?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above. If you are still having issues, contact your administrator.
+{standard-fail-text}
 
-// end::task-table-setup[]
+[type=taskResource]
+.Task Resources
+****
+* link:https://access.redhat.com/documentation/en-us/red_hat_amq/{amq-version}/html/using_amq_online_on_openshift_container_platform/managing-address-spaces-messaging#proc-create-address-space-console-messaging[Creating addresses using the AMQ Online Console, window="_blank"]
+****
 
 
 [time=5]
-[id='integrating-eventdriven-and-apidriven-applications']
 [id='creating-connections']
 == Creating connections
 :context: creating-connections
@@ -211,7 +197,7 @@ Order System REST API Connector
 Is the new connector *Order System REST API Connector* displayed on the *Customizations > API Client Connectors* screen of the link:{fuse-url}[Red Hat Fuse Online, window="_blank", id="{context}-2"] console?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above.  If you are still having issues, contact your administrator.
+{standard-fail-text}
 
 // end::creating-api-connector[]
 
@@ -222,7 +208,7 @@ Verify that you followed each step in the procedure above.  If you are still hav
 [.integr8ly-docs-header]
 === Creating HTTP connection to CRUD App
 
-To enable Fuse Online to send messages from the queue to the Order Management System, create a connection in Red Hat Fuse Online using the API connector you created earlier.
+To enable Fuse Online to send messages from the queue to the {retrieve-messages-app}, create a connection in Red Hat Fuse Online using the API connector you created earlier.
 
 
 . Log in to the link:{fuse-url}[Red Hat Fuse Online, window="_blank", id="{context}-3"] console.
@@ -257,7 +243,7 @@ Order System REST API Connection
 Is the new connection displayed on the *Connections* screen of the link:{fuse-url}[Red Hat Fuse Online, window="_blank", id="{context}-4"] console?
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above.  If you are still having issues, contact your administrator.
+{standard-fail-text}
 
 
 // end::creating-http-connection[]
@@ -266,7 +252,7 @@ Verify that you followed each step in the procedure above.  If you are still hav
 [.integr8ly-docs-header]
 === Creating an AMQP connection in Red Hat Fuse Online
 
-To allow Fuse Online to consume messages placed on the queue by the Order Entry System, create a connection in Red Hat Fuse Online:
+To allow Fuse Online to consume messages placed on the queue by the {create-messages-app}, create a connection in Red Hat Fuse Online:
 
 
 :fuse-url: https://eval.apps.city.openshiftworkshop.com/
@@ -321,7 +307,7 @@ Is the new connection displayed on the *Connections* screen of the link:{fuse-ur
 
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above.  If you are still having issues, contact your administrator.
+{standard-fail-text}
 
 
 // end::creating-amqp-connection-in-fuse[]
@@ -333,6 +319,7 @@ Verify that you followed each step in the procedure above.  If you are still hav
 * link:https://access.redhat.com/documentation/en-us/red_hat_fuse/{fuse-version}/html-single/connecting_fuse_online_to_applications_and_services/#supported-connectors_connectors[Connectors that are supported by Fuse Online, window="_blank"]
 * link:https://en.wikipedia.org/wiki/Advanced_Message_Queuing_Protocol[About AMQP, window="_blank"]
 ****
+
 
 [time=5]
 [id='creating-an-integration']
@@ -435,27 +422,26 @@ Is the integration displayed as *Running* on the *Integrations* screen of the li
 ****
 
 
-
-
 [time=5]
-[id='using-the-application-integration']
-== Using the application integration
+[id='using-the-integration']
+== Using the integration
 :context: using-the-application-integration
 
-After setting up the integration between the Order Entry System and Order Management System, use the integration to create a new order.
+After setting up the integration between the {create-messages-app} and {retrieve-messages-app}, use the integration to create a new order.
 
 :node-url: http://frontend-node-app.apps.city.openshiftworkshop.com/
-:spring-url: http://spring-boot-rest-http-crud-spring-app.apps.city.openshiftworkshop.com/
+:spring-url: http://spring-boot-rest-http-crud-spring-app.apps.city.openshift
+workshop.com/
 :fuse-url: https://eval.apps.city.openshiftworkshop.com/
 
-. Navigate to the link:{route-order-entry-ui-host}[Order Entry System, window="_blank", id="{context}-1"].
+. Navigate to the link:{route-order-entry-ui-host}[{create-messages-app}, window="_blank", id="{context}-1"].
 . Click the *Create an order* button.
 . Enter a value for *Part Name*, e.g `Engine`, and a quantity, e.g `1`.
 . Click *Save*.
 
-. Navigate to the link:{route-order-management-ui-host}[Order Management System, window="_blank", id="{context}-2"].
+. Navigate to the link:{route-order-management-ui-host}[{retrieve-messages-app}, window="_blank", id="{context}-2"].
 
-. Check that the entry from the Order Entry System is listed in the Order Management System.
+. Check that the entry from the {create-messages-app} is listed in the {retrieve-messages-app}.
 
 
 [type=verification]
@@ -472,7 +458,7 @@ Is your activity displayed?
 ****
 
 [type=verificationFail]
-Verify that you followed each step in the procedure above.  If you are still having issues, contact your administrator.
+{standard-fail-text}
 
 
 // end::task-using-integration[]
