--- a/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
+++ b/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
@@ -69,15 +69,15 @@ Red Hat manages this instance, however there are some users that have admin leve
 
 NOTE: The solution-patterns realm used in this Solution Pattern is shared with all users on the cluster. Do not use this realm for production applications.
 
-. Navigate to the link:{sso-realm-url}[SSO Realm, window="_blank"].
-. Enter the username `{shared-realm-username}` and password `password` if prompted.
-. Details for the {realm-name} realm are displayed upon login success.
-. Select *Clients* from the menu on the left.
-. Click the *Create* button at the top of the list of clients to display the *Add Client* screen:
-.. Enter `{client-name}` in the *Client ID* field.
-.. Verify *Client Protocol* is set to `openid-connect`.
-.. Paste the URL of the *{create-messages-app} UI* from the *Integrating message-oriented middleware with a RESTful API using AMQ Online* Solution Pattern in the *Root URL* field. This should look similar to `https://order-entry-ui-{user-username}-<NAMESPACE>.{openshift-app-host}`
-.. Click *Save*.
+. Go to the link:{sso-realm-url}[Solution Patterns Realm, window="_blank"].
+. If prompted, enter the username `{shared-realm-username}` and password `password`. You will see details for the {realm-name} realm if the login is successful.
+. Select *Clients* from the vertical navigation menu on the left side of the screen.
+. Click the *Create* button at the top of the list of clients.
+. On the *Add Client* screen:
+.. In the *Client ID* field, enter `{client-name}`.
+.. Verify the *Client Protocol* is set to `openid-connect`.
+.. In the *Root URL* field, paste the URL of the *{create-messages-app} UI* from the *{sp1-title}* Solution Pattern. This should look similar to `https://order-entry-ui-{user-username}-<NAMESPACE>.{openshift-app-host}`
+.. Click the *Save* button.
 . The *Settings* screen for the {client-name} client should be displayed.
 . Verify that the *Access Type* field is set to *public*. This means the client is a frontend application that needs to log in using a web browser.
 
