--- a/walkthroughs/includes-test/walkthrough.adoc
+++ b/walkthroughs/includes-test/walkthrough.adoc
@@ -1,3 +1,5 @@
+:table-name: my-awesome-table
+
 = Template Walkthrough
 
 // This is a template meant to be used as a starting point for walkthrough development
@@ -10,7 +12,7 @@
 * link:https://blog.openshift.com/[Openshift Blog, window="_blank"]
 ****
 
-include::/partials/creating-a-table.adoc[]
+include::partials/creating-a-table.adoc[]
 
 [time=5]
 == Task Title
