--- a/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
+++ b/walkthroughs/1-connecting-apps-asynchronous-messaging/walkthrough.adoc
@@ -8,7 +8,7 @@
 :amq-documentation-url: https://access.redhat.com/documentation/en-us/red_hat_amq/{amq-version}/
 
 //attributes
-:title: Connecting applications using asynchronous messaging
+:title: 1 - Connecting applications using asynchronous messaging
 //:tasksdir: ../_tasks/
 :create-messages-app: Order Entry System
 :retrieve-messages-app: Order Management System
