--- a/walkthroughs/4-protecting-apis/walkthrough.adoc
+++ b/walkthroughs/4-protecting-apis/walkthrough.adoc
@@ -9,7 +9,7 @@
 :route: https://wt3-{user-username}-3scale.{openshift-app-host}
 
 //attributes
-:title: Protecting APIs
+:title: 4 - Protecting APIs
 :3scale-name: Red Hat 3scale API Management Platform
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
