--- a/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
+++ b/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
@@ -24,7 +24,7 @@
 = {title}
 
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
-Learn how to setup Customer Application SSO to protect end-user applications by using standards such as OpenID Connect, OAuth 2.0, and SAML 2.0.
+Learn how to setup {customer-sso-name} to protect end-user applications by using standards such as OpenID Connect, OAuth 2.0, and SAML 2.0.
 
 IMPORTANT: You must complete the _{sp1-title}_ Solution Pattern before starting this one.
 
