--- a/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
+++ b/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
@@ -16,6 +16,7 @@
 :customer-sso-name: Customer Application SSO
 :client-name: {user-username}-order-entry-system
 :realm-name: solution-patterns
+:realm-display-name: Solution Patterns Realm
 :shared-realm-username: developer
 :standard-fail-text: Verify that you followed all the steps. If you continue to have issues, contact your administrator.
 
@@ -26,7 +27,7 @@
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
 Learn how to setup {customer-sso-name} to protect end-user applications by using standards such as OpenID Connect, OAuth 2.0, and SAML 2.0.
 
-IMPORTANT: You must complete the _{sp1-title}_ Solution Pattern before starting this one.
+NOTE: You must complete the _{sp1-title}_ Solution Pattern before starting this one.
 
 //If I make this a title, it breaks the layout.
 *Welcome back to Cruddy’s Car Parts*
@@ -56,34 +57,36 @@ image::images/arch.png[integration, role="integr8ly-img-responsive"]
 == Creating a client
 
 To secure your application with single sign-on, you must create a client in a realm.
-The client represents the application being secured and contains important details regarding the security applied to the application.
-The realms are what users belong to so they can log in.
+
+The client represents the application being secured. It contains important details regarding the type of security applied to the application.
+
+The realm is a  what users belong to so they can log in.
 Realms are isolated from one another and can only manage and authenticate the users that belong to them.
 You can use the Customer Application SSO to log in to a realm and manage your *Clients*, *Roles*, *Users* and *Groups*.
 
-.What is Customer Application SSO?
+*What is Customer Application SSO?*
 ****
 Customer Application SSO, included with Red Hat Managed Integration, enables you to define the identities of your end users.
 Red Hat manages this instance, however there are some additional users with admin level privileges who can configure this instance.
 ****
 
-IMPORTANT: The realm used in this Solution Pattern is shared with *all* users on the cluster. *Do not use this realm for production applications*.
+NOTE: The realm used in this Solution Pattern is shared with *all* users on the cluster. *Do not use this realm for production applications*.
 
-. Go to the link:{sso-realm-url}[Solution Patterns Realm, window="_blank"].
+. Go to the link:{sso-realm-url}[{realm-display-name}, window="_blank"].
 . If prompted, enter the username `{shared-realm-username}` and password `password`. You will see the *Realm Settings* screen for the *{realm-name}* realm if the login is successful.
 . Select *Clients* from the vertical navigation menu on the left side of the screen.
-. Click the *Create* button at the top of the list of clients.
+. Click the *Create* button on the top right of the Clients screen.
 . On the *Add Client* screen:
 .. In the *Client ID* field, enter `{client-name}`.
-.. Verify the *Client Protocol* is set to `openid-connect`.
+.. Verify the *Client Protocol* is set to *openid-connect*.
 .. In the *Root URL* field, paste the URL of the *{create-messages-app} UI* from the *{sp1-title}* Solution Pattern. This should look similar to `https://order-entry-ui-{user-username}-<NAMESPACE>.{openshift-app-host}`
-.. Click the *Save* button.
+.. Click *Save*.
 . The *Settings* screen for the {client-name} client should be displayed.
 . Verify that the *Access Type* field is set to *public*. This means the client is a frontend application that needs to log in using a web browser.
 
 [type=verification]
 Select *Clients* from the vertical navigation menu on the left side of the screen.
-Is the `{client-name}` client listed and is the *Enabled* field set to `True`?
+Is the `{client-name}` client listed and is the *Enabled* field set to *True*?
 
 [type=verificationFail]
 In the *Settings* tab on the *Client* page, make sure that the *Enabled* toggle is set to *ON*. {standard-fail-text}
