--- a/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
+++ b/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
@@ -73,20 +73,26 @@ Red Hat manages this instance, however there are some additional users with admi
 NOTE: The realm used in this Solution Pattern is shared with *all* users on the cluster. *Do not use this realm for production applications*.
 
 . Go to the link:{sso-realm-url}[{realm-display-name}, window="_blank"].
-. If prompted, enter the username `{shared-realm-username}` and password `password`. You will see the *Realm Settings* screen for the *{realm-name}* realm if the login is successful.
+. If prompted, enter the username `{shared-realm-username}` and password `password`.
+. You will see the *Realm Settings* screen for the *{realm-name}* realm if the login is successful.
 . Select *Clients* from the vertical navigation menu on the left side of the screen.
 . Click the *Create* button on the top right of the Clients screen.
 . On the *Add Client* screen:
-.. In the *Client ID* field, enter `{client-name}`.
+.. In the *Client ID* field, enter
++
+[subs="attributes+"]
+----
+{client-name}
+----
 .. Verify the *Client Protocol* is set to *openid-connect*.
 .. In the *Root URL* field, paste the URL of the *{create-messages-app} UI* from the *{sp1-title}* Solution Pattern. This should look similar to `https://order-entry-ui-{user-username}-<NAMESPACE>.{openshift-app-host}`
 .. Click *Save*.
-. The *Settings* screen for the {client-name} client should be displayed.
+. You will see the *Settings* screen for the *{client-name}* client if the save is successful.
 . Verify that the *Access Type* field is set to *public*. This means the client is a frontend application that needs to log in using a web browser.
 
 [type=verification]
 Select *Clients* from the vertical navigation menu on the left side of the screen.
-Is the `{client-name}` client listed and is the *Enabled* field set to *True*?
+Is the *{client-name}* client listed with the *Enabled* field set to *True*?
 
 [type=verificationFail]
 In the *Settings* tab on the *Client* page, make sure that the *Enabled* toggle is set to *ON*. {standard-fail-text}
