--- a/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
+++ b/walkthroughs/2-protecting-apps-sso/walkthrough.adoc
@@ -25,7 +25,7 @@
 = {title}
 
 // word count that fits best is 15-22, with 20 really being the sweet spot. Character count for that space would be 100-125
-Learn how to setup {customer-sso-name} to protect end-user applications by using standards such as OpenID Connect, OAuth 2.0, and SAML 2.0.
+Learn how to set up {customer-sso-name} to protect end-user applications by using standards such as OpenID Connect, OAuth 2.0, and SAML 2.0.
 
 NOTE: You must complete the _{sp1-title}_ Solution Pattern before starting this one.
 
@@ -56,24 +56,26 @@ image::images/arch.png[integration, role="integr8ly-img-responsive"]
 [time=7]
 == Creating a client
 
-To secure your application with single sign-on, you must create a client in a realm.
+To secure your application with single sign-on, you must create a _client_ in a _realm_.
 
-The client represents the application being secured. It contains important details regarding the type of security applied to the application.
+Client - The client represents the application being secured. Often, clients are web services that want to use Red Hat Single Sign-On (RHSSO) to secure themselves and provide a single sign-on solution.
 
-The realm is a  what users belong to so they can log in.
-Realms are isolated from one another and can only manage and authenticate the users that belong to them.
-You can use the Customer Application SSO to log in to a realm and manage your *Clients*, *Roles*, *Users* and *Groups*.
+Realm - A realm is used to manage a set of users, credentials, roles, and groups. A user belongs to and logs into a realm.
+Realms are isolated from one another and can only manage and authenticate the users that they control.
 
-*What is Customer Application SSO?*
 ****
+*What is Customer Application SSO?*
+
 Customer Application SSO, included with Red Hat Managed Integration, enables you to define the identities of your end users.
 Red Hat manages this instance, however there are some additional users with admin level privileges who can configure this instance.
 ****
 
 NOTE: The realm used in this Solution Pattern is shared with *all* users on the cluster. *Do not use this realm for production applications*.
 
-. Go to the link:{sso-realm-url}[{realm-display-name}, window="_blank"].
-. If prompted, enter the username `{shared-realm-username}` and password `password`.
+Follow these steps to create a client.
+
+. Go to the link:{sso-realm-url}[{realm-display-name}, window="_blank"], which is running on your {customer-sso-name} service. 
+.. If prompted, enter the username `{shared-realm-username}` and password `password`.
 . You will see the *Realm Settings* screen for the *{realm-name}* realm if the login is successful.
 . Select *Clients* from the vertical navigation menu on the left side of the screen.
 . Click the *Create* button on the top right of the Clients screen.
@@ -88,14 +90,14 @@ NOTE: The realm used in this Solution Pattern is shared with *all* users on the 
 .. In the *Root URL* field, paste the URL of the *{create-messages-app} UI* from the *{sp1-title}* Solution Pattern. This should look similar to `https://order-entry-ui-{user-username}-<NAMESPACE>.{openshift-app-host}`
 .. Click *Save*.
 . You will see the *Settings* screen for the *{client-name}* client if the save is successful.
-. Verify that the *Access Type* field is set to *public*. This means the client is a frontend application that needs to log in using a web browser.
+. Verify that the *Access Type* field is set to *public*. This means the client is a front-end application that needs to log in using a web browser.
 
 [type=verification]
 Select *Clients* from the vertical navigation menu on the left side of the screen.
-Is the *{client-name}* client listed with the *Enabled* field set to *True*?
+Is the *{client-name}* client listed in the table with *Enabled* set to *True*?
 
 [type=verificationFail]
-In the *Settings* tab on the *Client* page, make sure that the *Enabled* toggle is set to *ON*. {standard-fail-text}
+In the *Settings* tab on the *Client* page, make sure the *Enabled* toggle is set to *ON*. {standard-fail-text}
 
 [time=7]
 == Creating a user
